--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <textarea id="textarea"></textarea>
-    <script src="app.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
 
